--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<!-- Weather app 
-This application display's you weather details of particular city-->
+<!-- Project Name: Weather app
+     : Weather app 
+This application display's you weather details of particular city
+-->
 
 <!DOCTYPE html>
 <html>
@@ -21,9 +23,10 @@ This application display's you weather details of particular city-->
             <div class="split right">
                 <div class="weathercontainer">
                     <p class="weatherdetails">Bengaluru, Karnataka</p>
-                    <p class="linespace">Wednesday <span>1:00 pm</span></p>                          
+                    <p class="linespace" id="daytime">Wednesday 1:00 pm</p>                          
                     <p class="linespace">Party Cloudy <sup> ☁️️ </sup></p>
-                    <h1 class="temperature"> 70 <sup class="sign"><a  href="#">&#8451;</a> | <a href="#">&#8457;</a></sup></h1>
+                    <p class="temperature"> 70 
+                        <sup class="sign"><span class="celcius">&#8451;</span> | <span class="farhenite">&#8457;</span></sup></h1>
                 </div>
                 <div class="centered">
                     <label>Enter city name</label><br>
