--- a/index.html
+++ b/index.html
@@ -22,22 +22,24 @@ This application display's you weather details of particular city
             <!-- start of right side -->
             <div class="split right">
                 <div class="weathercontainer">
-                    <p class="weatherdetails">Bengaluru, Karnataka</p>
-                    <p class="linespace" id="daytime">Wednesday 1:00 pm</p>                          
-                    <p class="linespace">Party Cloudy <sup> ☁️️ </sup></p>
+                    <p class="weatherdetails" id="displaycity">Bengaluru, Karnataka</p>
+                    <p class="linespace" id="daytime"></p>                          
+                    <p class="linespace" id="info">Party Cloudy <sup ><span id="emoji"> ☁️️</span> </sup></p>
                     <p class="temperature"> 70 
-                        <sup class="sign"><span class="celcius">&#8451;</span> | <span class="farhenite">&#8457;</span></sup></h1>
+                        <sup class="sign"><span class="celcius" id="celsius">&#8451;</span> | <span class="farhenite">&#8457;</span></sup></h1>
                 </div>
                 <div class="centered">
                     <label>Enter city name</label><br>
-                    <input list="city" name="browser" class="inputsize" placeholder="City,State">
+                    <input list="city" class="inputsize" 
+                     placeholder="City,State" id="getcity">
                     <datalist id="city">
-                        <option value="Bengaluru,Karnataka">
+                        <option value="Bengaluru">
                         <option value="Firefox">
                         <option value="Chrome">
                         <option value="Opera">
                         <option value="Safari">
                     </datalist>
+                    <button onclick="weather.getcelsius()">Submit</button>
                 </div>
             </div>
             <!-- end of right side -->
