--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!-- Project Name: Weather app
-     : Weather app 
-This application display's you weather details of particular city
+<!-- Project Name: Weather app 
+     Des: This application display's weather details of a particular city when selected
+     lang: HTMl,CSS,JS
+     Author: Shaik Mudassir
+
 -->
 
 <!DOCTYPE html>
