--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
      Description: This application display's weather details of a particular city when selected
      language: HTMl,CSS,JS
      Author: Shaik Mudassir
+     Github: https://github.com/shaik80
 -->
 
 <!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="Github" content="https://github.com/shaik80">
+        <meta name="Author" content="Shaik Mudassir">
         <title>Weather app</title>
+        <link rel = "icon" href ="./img/1.jpg" type = "image/x-icon"> 
         <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
